# datetime-parse-rs

./: .gitignore  Cargo.toml  README.md
examples/: dates.txt  parse.rs
src/: lib.rs  tests.rs
