[package]
name = "datetime_parse"
authors = ["MARIRS <marirs@gmail.com>"]
description = "parse various formats of date time strings to rfc3339"
keywords = ["date", "time", "parse"]
categories = ["parsing"]
version = "0.0.1-beta.4"
exclude = ["examples"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/marirs/datetime-parse-rs"
edition = "2018"

[dependencies]
chrono = "0.4.19"

[badges]
travis-ci = { repository = "marirs/datetime-parse-rs" }

[lib]
name = "datetime_parse"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
